# environments

./: README.md  _howto_maintainpackage  pyproject.toml  registerEnvironments.py  release.sh  requirements.txt  run.py
MABs/: MDPtoMAB_wrapper.py  StochasticBandits.py
MABs/rendering/: textRenderer.py
MDPs_discrete/: demo.py  gymWrapper.py
MDPs_discrete/envs/: RandomMDP.py  RiverSwim.py  ThreeStateMDP.py
MDPs_discrete/envs/GridWorld/: gridworld.py
MDPs_discrete/rendering/: textRenderer.py
MLAgents_unity/: demo.py  gymWrapper.py
Minigrid/: demo.py
demo/: __init__.py  fulldemo.py
lib/: __init__.py
lib/MABs/: Distributions.py  StochasticBandits.py
lib/MABs/rendering/: textRenderer.py
lib/MDPs_discrete/: demo.py  gymWrapper.py
lib/MDPs_discrete/envs/: RandomMDP.py  RiverSwim.py  ThreeStateMDP.py
lib/MDPs_discrete/envs/GridWorld/: gridworld.py
lib/MDPs_discrete/rendering/: networkxRenderer.py  pydotRenderer.py  textRenderer.py
src/statisticalrl_environments/: __init__.py  fulldemo.py  register.py
src/statisticalrl_environments/BatchMABs/: wrappers.py
src/statisticalrl_environments/BatchMABs/envs/: batchmabs.py
src/statisticalrl_environments/MABs/: Distributions.py  StochasticBandits.py  wrappers.py
src/statisticalrl_environments/MABs/envs/: StochasticBandits.py
src/statisticalrl_environments/MABs/rendering/: textRenderer.py
src/statisticalrl_environments/MDPs_discrete/: demo.py  gymWrapper.py
src/statisticalrl_environments/MDPs_discrete/envs/: RandomMDP.py  RiverSwim.py  ThreeStateMDP.py
(+4 files in other folders)
