[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "statisticalRL-environments"
version = "2.2507"
description = "Environments for the Statistical Reinforcement Learning project"
authors = [{ name = "Odalric-Ambym Maillard", email = "odalric.maillard@inria.fr" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
"six==1.17.0",
"gymnasium==1.3.0",
"numpy==2.5.0",
"networkx==3.6.1",
"matplotlib==3.11.0",
"scipy==1.18.0",
"pydot==4.0.1"
]
#Also default packages: sys,random,math,string,time,os

[project.urls]
Homepage = "https://github.com/StatisticalRL/environments"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]